# mcmd

./: .gitignore  8h2bssp.pqr  CMakeLists.txt  README.md  a  amat  cloc-git.sh  debugnotes  gitnotes.txt  install  mcmd.inp  mcmd_vs_mpmc_tests.ods  runlog  t  traj.xyz
.github/workflows/: cmake.yml
2.6/: der  traj.xyz
2.6/src/: coulombic.cpp  distance.cpp  lj.cpp  main.cpp  mc.cpp  md.cpp  polar.cpp  potential.cpp  radial_dist.cpp  rotatepoint.cpp  system_functions.cpp
atomfiles/: 1dve.xyz  README.md  acetylene.pqr  acetylene10.pqr  h2o.xyz  tetracycline_wonky.xyz
cuda_test/: mcmd.inp
cuda_test/cpu/: mcmd.inp
cuda_test/gpu/: mcmd.inp
examples/cuda/: mcmd.inp
gui/: Info.plist  backend.h  fileio.cpp  fileio.h  graphspage.qml  gui_mcmd.pro  gui_mcmd_linux  gui_mcmd_macos  main.cpp  main.qml  main_old_copy.qml  moc_backend.cpp  moc_fileio.cpp  moc_viz.cpp  viz.h
md_test/: go.sh  histogram.dx  mcmd.inp  t  te  traj.xyz  view.vmd
multisorb_test/: mcmd.inp
nopbc_test/: mcmd.inp  t
npt_test/: mcmd.inp  t
nve_test/: mcmd.inp  t
nvt_test/: histogram.dx  mcmd.inp  t
pdbs/: mof5.xyz  optimized2.xyz
src/: NOTES  add_molecule.cpp  averages.cpp  boltzmann.cpp  bonding.cpp  classes.cpp  cmake_config.h  cmake_config.h.in  commy.cpp  compile.sh  constants.cpp  coulombic.cpp  cuda  cuda.cu  cudafuncs.cu  displace_molecule.cpp  distance.cpp  fugacity.cpp  histogram.cpp  io.cpp  lj.cpp  main.cpp  main_out.cpp  mc.cpp  md.cpp  md_functions.cpp  mixing.cpp  moves.cpp  observables.cpp  optimize.cpp  pairs.cpp  phast2.cpp  polar.cpp  potential.cpp  radial_dist.cpp  remove_molecule.cpp  rotatepoint.cpp  scratch  sp.cpp  system.cpp  (+5 more)
uvt_test/: dip  en  mcmd.inp  t
(+126 files in other folders)
